# adv_mla_at2

./: .gitignore  README.md  pyproject.toml
api/: requirements.txt
api/app/: main.py
api/models/: arima.joblib
docs/: conf.py
models/forecasting/: arima.joblib
models/predictive/: sgd_pipeline.joblib
notebooks/forecasting/: dhawale_kritika-24587661-arima.ipynb
notebooks/predictive/: dhawale_kritika-24587661-sgd_pipeline.ipynb  predictive_sgd.ipynb
src/data/: filter_items.py  merge.py
src/features/: build_features.py
src/models/predictive/: predict_model.py  train_model.py
