[tool.poetry]
name = "adv-mla-at2"
version = "0.1.0"
description = ""
authors = ["Kritz23 <kritz2399@gmail.com>"]
readme = "README.md"
packages = [{include = "adv_mla_at2"}]

[tool.poetry.dependencies]
python = "3.9.13"
pandas = "^2.1.1"
scikit-learn = "^1.3.1"
dask = {extras = ["complete"], version = "^2023.9.2"}


[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
